// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldRadio 1`] = `
.c5 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c3 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c3 .c4 {
  background: #FFFFFF;
}

.c3 input[type='radio']:checked + .c4 {
  background: #6C43E0;
  border-color: #6C43E0;
}

.c3 input[type='radio']:checked + .c4::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c3 input[type='radio']:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input[type='radio']:disabled + .c4 {
  opacity: 0.5;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c6 {
  width: 100%;
}

.c0 .c7 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        className=""
        id="thumbs-up"
        name="thumbsUp"
        type="radio"
      />
      <div
        className="c4 c5"
      />
    </div>
  </div>
</div>
`;

exports[`A FieldRadio checked 1`] = `
.c5 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c3 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c3 .c4 {
  background: #FFFFFF;
}

.c3 input[type='radio']:checked + .c4 {
  background: #6C43E0;
  border-color: #6C43E0;
}

.c3 input[type='radio']:checked + .c4::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c3 input[type='radio']:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input[type='radio']:disabled + .c4 {
  opacity: 0.5;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c6 {
  width: 100%;
}

.c0 .c7 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        checked={true}
        className=""
        id="thumbs-up"
        name="thumbsUp"
        type="radio"
      />
      <div
        className="c4 c5"
      />
    </div>
  </div>
</div>
`;
